--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne1" aria-expanded="false" aria-controls="flush-collapseOne">
+              data-bs-target="#flush-collapseOne1" aria-expanded="false" aria-controls="flush-collapseOne1">
               <img class="perfil" src="img/victorio.png" alt="foto de perfil">
               <div class="info">
                 <div class="nome-pet">
@@ -72,40 +72,43 @@
             <div class="accordion-body">
 
               <section class="blocos">
+                <div>
 
-                <div class="card bloco" style="width: 18rem;">
-                  <div class="card-body">
-                    <div class="bloco-titulo">
-                      <img src="ico/icone_a.svg" alt="Nome" class="bloco-icone">
-                      <h5 class="card-title">Nome
-                      </h5>
+
+                  <div class="card bloco" style="width: 18rem;">
+                    <div class="card-body">
+                      <div class="bloco-titulo">
+                        <img src="ico/icone_a.svg" alt="Nome" class="bloco-icone">
+                        <h5 class="card-title">Nome
+                        </h5>
+                      </div>
+                      <p class="card-text">Dogguinho
+                      </p>
                     </div>
-                    <p class="card-text">Dogguinho
-                    </p>
                   </div>
-                </div>
 
-                <div class="card bloco" style="width: 18rem;">
-                  <div class="card-body">
-                    <div class="bloco-titulo">
-                      <img src="ico/icone_bateria.svg" alt="Nome" class="bloco-icone">
-                      <h5 class="card-title">Bateria
-                      </h5>
+                  <div class="card bloco" style="width: 18rem;">
+                    <div class="card-body">
+                      <div class="bloco-titulo">
+                        <img src="ico/icone_bateria.svg" alt="Nome" class="bloco-icone">
+                        <h5 class="card-title">Bateria
+                        </h5>
+                      </div>
+                      <p class="card-text">25%
+                      </p>
                     </div>
-                    <p class="card-text">25%
-                    </p>
                   </div>
-                </div>
 
-                <div class="card bloco" style="width: 18rem;">
-                  <div class="card-body">
-                    <div class="bloco-titulo">
-                      <img src="ico/icone_wifi.svg" alt="Nome" class="bloco-icone">
-                      <h5 class="card-title">Conectar Coleira
-                      </h5>
+                  <div class="card bloco" style="width: 18rem;">
+                    <div class="card-body">
+                      <div class="bloco-titulo">
+                        <img src="ico/icone_wifi.svg" alt="Nome" class="bloco-icone">
+                        <h5 class="card-title">Conectar Coleira
+                        </h5>
+                      </div>
+                      <p class="card-text">Conectada
+                      </p>
                     </div>
-                    <p class="card-text">Conectada
-                    </p>
                   </div>
                 </div>
               </section>
@@ -131,7 +134,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo1" aria-expanded="false" aria-controls="flush-collapseTwo">
+              data-bs-target="#flush-collapseTwo1" aria-expanded="false" aria-controls="flush-collapseTwo1">
               <img class="perfil" src="img/tutu.jpg" alt="foto de perfil">
               <div class="info">
                 <div class="nome-pet">
@@ -143,7 +146,7 @@
               </div>
             </button>
           </h2>
-          <div id="flush-collapseTwo1" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+          <div id="flush-collapseTwo1" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo1"
             data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
 
@@ -206,7 +209,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseThree1" aria-expanded="false" aria-controls="flush-collapseThree">
+              data-bs-target="#flush-collapseThree1" aria-expanded="false" aria-controls="flush-collapseThree1">
               <img class="perfil" src="img/pacoca.jpg" alt="foto de perfil">
               <div class="info">
                 <div class="nome-pet">
@@ -311,7 +314,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne2" aria-expanded="false" aria-controls="flush-collapseOne">
+              data-bs-target="#flush-collapseOne2" aria-expanded="false" aria-controls="flush-collapseOne2">
               <img class="perfil" src="img/victorio.png" alt="foto de perfil">
               <div class="info">
                 <div class="nome-pet">
@@ -355,21 +358,21 @@
                     </p>
                   </div>
                 </div>
-                <div class="div-repsom">
-                  <div class="btn-repsom">
-                    <a class="btn-repsom2" href="">
-                      <img src="ico/play.svg"> Reproduzir Som
-                    </a>
-                  </div>
-                </div>
               </section>
+              <div class="div-repsom">
+                <div class="btn-repsom">
+                  <a class="btn-repsom2" href="">
+                    <img src="ico/play.svg"> Reproduzir Som
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
+          <h2 class="accordion-header" id="flush-headingTwo2">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              data-bs-target="#flush-collapseTwo2" aria-expanded="false" aria-controls="flush-collapseTwo2" 2>
               <img class="perfil" src="img/tutu.jpg" alt="foto de perfil">
               <div class="info">
                 <div class="nome-pet">
@@ -381,7 +384,7 @@
               </div>
             </button>
           </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+          <div id="flush-collapseTwo2" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo2"
             data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">
 
@@ -413,21 +416,21 @@
                     </p>
                   </div>
                 </div>
-                <div class="div-repsom">
-                  <div class="btn-repsom">
-                    <a class="btn-repsom2" href="">
-                      <img src="ico/play.svg"> Reproduzir Som
-                    </a>
-                  </div>
-                </div>
               </section>
+              <div class="div-repsom">
+                <div class="btn-repsom">
+                  <a class="btn-repsom2" href="">
+                    <img src="ico/play.svg"> Reproduzir Som
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseThree2" aria-expanded="false" aria-controls="flush-collapseThree">
+              data-bs-target="#flush-collapseThree2" aria-expanded="false" aria-controls="flush-collapseThree2">
               <img class="perfil" src="img/pacoca.jpg" alt="foto de perfil">
               <div class="info">
                 <div class="nome-pet">
@@ -471,14 +474,14 @@
                     </p>
                   </div>
                 </div>
-                <div class="div-repsom">
-                  <div class="btn-repsom">
-                    <a class="btn-repsom2" href="">
-                      <img src="ico/play.svg"> Reproduzir Som
-                    </a>
-                  </div>
-                </div>
               </section>
+              <div class="div-repsom">
+                <div class="btn-repsom">
+                  <a class="btn-repsom2" href="">
+                    <img src="ico/play.svg"> Reproduzir Som
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -497,7 +500,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseOne3" aria-expanded="false" aria-controls="flush-collapseOne">
+                data-bs-target="#flush-collapseOne3" aria-expanded="false" aria-controls="flush-collapseOne3">
                 <img class="perfil" src="img/victorio.png" alt="foto de perfil">
                 <div class="info">
                   <div class="nome-pet">
@@ -577,30 +580,30 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex justify-content-between">
-                    <div class="div-repsom">
-                      <div class="btn-editar">
-                        <a class="btn-editar2" href="">
-                          <img src="ico/icone_lapis.svg"> Editar
-                        </a>
-                      </div>
-                    </div>
-                    <div class="div-repsom">
-                      <div class="btn-deletar">
-                        <a class="btn-editar2" href="">
-                          <img src="ico/icone_lixo.svg"> Deletar
-                        </a>
-                      </div>
+                </section>
+                <div class="d-flex justify-content-between">
+                  <div class="div-repsom">
+                    <div class="btn-editar">
+                      <a class="btn-editar2" href="">
+                        <img src="ico/icone_lapis.svg"> Editar
+                      </a>
                     </div>
                   </div>
-                </section>
+                  <div class="div-repsom">
+                    <div class="btn-deletar">
+                      <a class="btn-editar2" href="">
+                        <img src="ico/icone_lixo.svg"> Deletar
+                      </a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                data-bs-target="#flush-collapseTwo3" aria-expanded="false" aria-controls="flush-collapseTwo3">
                 <img class="perfil" src="img/tutu.jpg" alt="foto de perfil">
                 <div class="info">
                   <div class="nome-pet">
@@ -612,7 +615,7 @@
                 </div>
               </button>
             </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+            <div id="flush-collapseTwo3" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
 
@@ -701,30 +704,30 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex justify-content-between">
-                    <div class="div-repsom">
-                      <div class="btn-editar">
-                        <a class="btn-editar2" href="">
-                          <img src="ico/icone_lapis.svg"> Editar
-                        </a>
-                      </div>
-                    </div>
-                    <div class="div-repsom">
-                      <div class="btn-deletar">
-                        <a class="btn-editar2" href="">
-                          <img src="ico/icone_lixo.svg"> Deletar
-                        </a>
-                      </div>
+                </section>
+                <div class="d-flex justify-content-between">
+                  <div class="div-repsom">
+                    <div class="btn-editar">
+                      <a class="btn-editar2" href="">
+                        <img src="ico/icone_lapis.svg"> Editar
+                      </a>
                     </div>
                   </div>
-                </section>
+                  <div class="div-repsom">
+                    <div class="btn-deletar">
+                      <a class="btn-editar2" href="">
+                        <img src="ico/icone_lixo.svg"> Deletar
+                      </a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseThree3" aria-expanded="false" aria-controls="flush-collapseThree">
+                data-bs-target="#flush-collapseThree3" aria-expanded="false" aria-controls="flush-collapseThree3">
                 <img class="perfil" src="img/pacoca.jpg" alt="foto de perfil">
                 <div class="info">
                   <div class="nome-pet">
@@ -811,7 +814,7 @@
                         <h5 class="card-title"> 17:00
                         </h5>
                       </div>
-                      <p class="card-text">Janta
+                      <p class="card-subtitle">Janta
                       </p>
                       <div class="linha">
                         <p class="card-text">Já deu o jantar?
@@ -824,23 +827,23 @@
                       </div>
                     </div>
                   </div>
-                  <div class="d-flex justify-content-between">
-                    <div class="div-repsom">
-                      <div class="btn-editar">
-                        <a class="btn-editar2" href="">
-                          <img src="ico/icone_lapis.svg"> Editar
-                        </a>
-                      </div>
-                    </div>
-                    <div class="div-repsom">
-                      <div class="btn-deletar">
-                        <a class="btn-editar2" href="">
-                          <img src="ico/icone_lixo.svg"> Deletar
-                        </a>
-                      </div>
+                </section>
+                <div class="d-flex justify-content-between">
+                  <div class="div-repsom">
+                    <div class="btn-editar">
+                      <a class="btn-editar2" href="">
+                        <img src="ico/icone_lapis.svg"> Editar
+                      </a>
                     </div>
                   </div>
-                </section>
+                  <div class="div-repsom">
+                    <div class="btn-deletar">
+                      <a class="btn-editar2" href="">
+                        <img src="ico/icone_lixo.svg"> Deletar
+                      </a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
